# egret

./: WORKSPACE
example/: BUILD.bazel  main.cc
regmaker/: BUILD.bazel  build_file_generator.cc  build_file_generator.h  main.cc  regression-test.template  regression_spec.cc  regression_spec.h  spec_handler.cc  spec_handler.h  test_generator.cc  test_generator.h  test_spec.template
src/: BUILD  Backref.cpp  Backref.h  CharSet.cpp  CharSet.h  Checker.cpp  Checker.h  Edge.cpp  Edge.h  NFA.cpp  NFA.h  ParseTree.cpp  ParseTree.h  Path.cpp  Path.h  RegexLoop.cpp  RegexLoop.h  RegexString.cpp  RegexString.h  Scanner.cpp  Scanner.h  Stats.cpp  Stats.h  TestGenerator.cpp  TestGenerator.h  Util.cpp  Util.h  egret.cpp  egret.h  egret_ext.cpp  main.cpp
src/test/: BUILD.bazel  long_slow.cc
src/test/regression/: BUILD.bazel  regression-patterns.json  regtest1.cc  regtest10.cc  regtest11.cc  regtest12.cc  regtest13.cc  regtest14.cc  regtest15.cc  regtest16.cc  regtest17.cc  regtest18.cc  regtest19.cc  regtest2.cc  regtest20.cc  regtest21.cc  regtest22.cc  regtest23.cc  regtest24.cc  regtest25.cc  regtest26.cc  regtest27.cc  regtest28.cc  regtest29.cc  regtest30.cc  regtest4.cc  regtest5.cc  regtest6.cc  regtest7.cc  regtest8.cc  regtest9.cc
